Fixed a few minor issues - shows layout subtitles not working. Comment shift does not work. soundcloud link does not play.

--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -14,4 +14,7 @@ $color-darkblack: #000000;
 $color-mercury: #E1E1E1;
 $color-alabaster: #FAFAFA;
 
+// Error Color Variables
+$color-red: #D22D2D;
+
 
