--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -9,18 +9,37 @@
         @include background-image (url(../assets/images/hero-shows.jpg));
         justify-content: center;
         align-items: flex-start;
+        height: fit-content;
+    }
+
+    &__container {
+        @include flexbox (column, $gap: 1rem);
+
+        // Start of Responsiveness
+        @include desktop {
+            @include flexbox;
+        }
+        // End of Responsiveness 
+
     }
 
     &__iframe {
         width: 100%;
-        height: 10.375rem;
         border: none;
+        margin-bottom: 1rem;
+
+        // Start of Responsiveness
+        @include tablet {
+            width: 60%;
+        }
+        // End of Responsiveness                                            
     }
 
     &__intro {
         @include p ($regular, $color-white);
         margin: 0;
         z-index: 1;
+        padding-top: 1rem;
 
         // Start of Responsiveness
         @include tablet {
@@ -45,6 +64,7 @@
     }
 
     @include desktop {
+        @include flexbox (row);
         max-width: 120rem;
         margin: 0 auto;
         padding-right: 8rem;
@@ -74,12 +94,21 @@
     }
 
     &__subtitles {
-        @include flexbox ($gap: 18rem);
-        padding-top: 0.76rem;
+        @include flexbox;
+        padding: 0.76rem 2rem 0;
 
+        // Start of Responsiveness 
         @include tablet {
             padding-top: 3rem;
+            width: 100%;
+            gap: 2.2rem;
         }
+
+        @include desktop {
+            margin: 2.125rem 0 0 9.75rem;
+            padding: 0 2rem;
+        }
+        // End of Responsiveness
     }
 
     &__text {
@@ -91,11 +120,17 @@
 
         @include tablet {
             display: block;
+            width: 8rem;
         }
     }
 
     &__text2 {
         margin: 0;
+        font-size: 0.8rem;
+
+        &--bold {
+            font-weight: $demi;
+        }
     }
 
     &__upcoming {
@@ -108,15 +143,12 @@
         // Start of Responsiveness
         @include tablet {
             @include flexbox ($gap: 1rem);
-            padding: 2.25rem 2rem 2.25rem 0rem;
+            padding: 2.25rem 2rem 2.25rem;
             gap: 2rem;
         }
 
         @include desktop {
-            max-width: 120rem;
-            margin: 0 auto;
-            padding-right: 8rem;
-            padding-left: 8rem;
+            margin-left: 9.75rem;
         }
         // End of Responsiveness
 
@@ -124,15 +156,16 @@
             background-color: $color-alabaster;
         }
 
-        &:active { //TODO Fix this
+        &:active {
             background-color: $color-mercury;
-        }
+        } //TODO Goes in Javascript
 
     }
 
     &__container2 {
         @include flexbox (column, $gap:0.5rem);
         justify-content: space-between;
+        width: 8rem;
 
         @include tablet {
             justify-content: center;
